fixed image on mobile devices? #3

--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,9 @@ h2 {
 }
 
 #photo {
-	width: 100%;
+	width: 75%;
+	text-align: center;
+	margin: 16px;
 }
 
 @media (min-width: 550px) {
